# philo-chat

./: README.md  pyproject.toml
api/: dependencies.py  main.py  schema.py
api/routers/: routers.py
philosopher_chat/: __init__.py  philosopher_chat.py
philosopher_chat/core/: chat.py  chat_completer.py  exceptions.py  message.py  prompt_loader.py  status.py  system.py  user.py
philosopher_chat/core/entities/: chat.py  chat_completer.py  philosopher.py  user.py
philosopher_chat/data/: philosophers.json  prompt_template.yaml
philosopher_chat/io_handlers/: console_io_handler.py  io_handler.py
src/: philo_chat.py
src/cli/: cli.py
src/core/: __init__.py
src/core/entities/: user.py
src/core/utils/: __init__.py
